fixed layout issues.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -119,6 +119,9 @@ h4 {
 
 #menu {
     transition: 0.2s;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
 }
 
 iframe {
@@ -126,7 +129,7 @@ iframe {
 }
 
 ol, ul {
-    margin-top: 10px;		/* Defaults are too much. */
+    margin-top: 10px;		/* Overriding _reset.css. */
     margin-bottom: 10px;
 }
 
